Fix DateRangePicker
- support max-count to limit amount of date-pickers
- select control updated incorrectly
- fix translation
- fix DatePicker markup to prevent toggle from covering the input

--- a/pub/static/themes/whitelabel/components/datepicker/_components.datepicker.scss
+++ b/pub/static/themes/whitelabel/components/datepicker/_components.datepicker.scss
@@ -31,12 +31,17 @@ $line-height: 1.2em !default;
     top: 0;
     right: 0;
     bottom: 0;
+}
 
+// override button status
+.datepicker-toggle.datepicker-toggle {
     width: $datepicker-toggle-width;
-    & + .datepicker-input {
+    // prevent toggle from covering the input
+    & ~ .datepicker-input {
         padding-right: $datepicker-toggle-width;
     }
 }
+
 .datepicker-toggle__icon {
     &::before {
         @include hb-icon(calendar);
